--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="https://thymeleaf.org">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!doctype html>
 
-        
-        <title>Alkchat-Register</title>
-    </head>
-    <body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
 
-        <header>
-            <h1>Alkchat Register</h1>
+  <title>AlkChat regform</title>
+
+
+</head>
+
+<body>
+
+<header>
+            <h1>Alkchat Register!</h1>
         </header>
-		<form th:action="@{/process_reg}" method:"post" th:object="${user}">
+		<form th:action="@{/process_reg}" th:object="${user}" method="post" >
 		<div>
 		<label>email</label>
 		<input type="email" th:field="*{email}" required/> 
@@ -30,5 +32,6 @@
 		</div>
 		</form>
 
-    </body>
+
+</body>
 </html>
