--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,11 @@
         </header>
 
         <div>
+        <h3><a th:href="@{/list_users}">users </a></h3>
         <h3><a th:href="@{/register}">register </a></h3>
+        <h3><a th:href="@{/login}">login </a></h3>
+        
+        
         </div>
     </body>
 </html>
